main: enhance layout by adding max-width and centering for body and product section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="slide">
       <div class="content-wrapper">
-        <div class="content">
+        <div class="content"><div class="content-inner">
           <div class="top">
 
 
@@ -144,11 +144,13 @@
 
           </div>
         </div>
+        </div>
       </div>
     </div>
     <div class="slide">
       <div class="content-wrapper">
         <div class="content">
+        <div class="content-inner">
           <div class="top">
             <p>Built For Better Outcomes</p>
 
@@ -172,13 +174,13 @@
 
 
           </div>
-        </div>
+        </div></div>
       </div>
     </div>
     </div>
     <div class="slide  end-slide">
       <div class="content-wrapper">
-        <div class="content">
+        <div class="content"><div class="content-inner">
           <div class="top">
             <p>Wellness You Can Measure</p>
             <a href="https://apps.apple.com/ca/app/hugr/id1445760716">
@@ -197,7 +199,7 @@
             <img src="assets/img/hugr-image-desktop.png" loading="lazy" alt="">
 
           </div>
-        </div>
+        </div></div>
       </div>
     </div>
     </div>
