main: run cache-bust

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/main.min.css">
+  <link rel="stylesheet" href="assets/css/main.min.css?v=25a9038ed65be8a7">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
@@ -307,7 +307,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script>
   <script src="https://unpkg.com/split-type"></script>
-  <script src="assets/js/main.min.js"></script>
+  <script src="assets/js/main.min.js?v=25a9038ed65be8a7"></script>
 </body>
 
 </html>
